# nvim-is-up-to-date

./: Cargo.toml  LICENSE  README.md
src/: main.rs  release.rs
