[package]
name = "nvim-is-up-to-date"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
lto = true
codegen-units = 1
